--- a/starbook/views/auth/login.hbs
+++ b/starbook/views/auth/login.hbs
@@ -1,4 +1,4 @@
-<form action="/auth/login" method="post">
+<form action="/login" method="post">
   <input type="text" name="username" id="">
   <input type="text" name="password" id="">
   <button type="submit">LOG IN</button>
