--- a/starbook/views/auth/signup.hbs
+++ b/starbook/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<form action="/auth/signup" method="post">
+<form action="/signup" method="post">
   <input type="text" name="username" id="">
   <input type="text" name="password" id="">
   <button type="submit">SIGN UP</button>
