--- a/starbook/views/index.hbs
+++ b/starbook/views/index.hbs
@@ -1,2 +1,46 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Starbook - the Homepage</title>
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+
+            <a class="navbar-brand" href="#">Welcome to the space</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Signup</a>
+                    </li>
+                </ul>
+                <span class="navbar-text">
+                    Welcome to the deep space. Get lost!
+                </span>
+            </div>
+        </nav>
+    </header>
+    <div>TEST TUESDAY 7PM</div>
+    <div class="test">TEST NOW IT WORKS</div>
+
+    <h1 class="animated flipInY delay-2s">Welcome to the deep space</h1>
+
+    <h1 class="animated zoomInRight slow delay-2s">I am an asteroyd</h1>
+
+</body>
+
+</html>
