--- a/starbook/views/profile/profile.hbs
+++ b/starbook/views/profile/profile.hbs
@@ -1,1 +1,11 @@
-<h1>Profile of {{username}}</h1>
+{{#each users}}
+Profile of: {{username}}
+<img src="{{profileImg}}" alt="">
+{{#each planets}} 
+
+{{#if_eq  name }}   
+
+{{/if_eq}}
+
+{{/each}}
+{{/each}}
