--- a/starbook/views/index.hbs
+++ b/starbook/views/index.hbs
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light ">
 
             <a class="navbar-brand" href="#">Welcome to the space</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -34,12 +34,11 @@
             </div>
         </nav>
     </header>
-    <div>TEST TUESDAY 7PM</div>
-    <div class="test">TEST NOW IT WORKS</div>
+    <img src="..." class="img-fluid" alt="Responsive image">
 
     <h1 class="animated flipInY delay-2s">Welcome to the deep space</h1>
 
-    <h1 class="animated zoomInRight slow delay-2s">I am an asteroyd</h1>
+    <h1 class="animated zoomInRight slower delay-2s">I am an asteroyd</h1>
 
 </body>
 
