--- a/starbook/public/stylesheets/style.css
+++ b/starbook/public/stylesheets/style.css
@@ -1,17 +1,8 @@
 body {
-  padding: 200px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; 
-}
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
   color: #00B7FF; }
 
 /*# sourceMappingURL=style.css.map */
-
-.test {
-  background-color: blueviolet;
-}
-
-.nav-link {
-  background-color: brown;
-}
