--- a/starbook/views/auth/login.hbs
+++ b/starbook/views/auth/login.hbs
@@ -1,5 +1,19 @@
-<form action="/login" method="post">
-  <input type="text" name="username" id="">
-  <input type="text" name="password" id="">
-  <button type="submit">LOG IN</button>
+<form action="/login" method="POST" id="form">
+  <h2>Login</h2>
+
+  <label for="username">Username</label>
+  <input type="text" name="username">
+
+  <label for="password">Password</label>
+  <input type="password" name="password">
+
+  {{#if errorMessage }}
+    <div class="error-message">{{ errorMessage }}</div>
+  {{/if}}
+
+  <button>Sign in</button>
+
+  <p class="account-message">
+    Don't have an account? <a href="/signup">Sign up</a>
+  </p>
 </form>
