--- a/starbook/views/auth/signup.hbs
+++ b/starbook/views/auth/signup.hbs
@@ -1,5 +1,13 @@
-<form action="/signup" method="post">
-  <input type="text" name="username" id="">
-  <input type="text" name="password" id="">
-  <button type="submit">SIGN UP</button>
+<form id="form" action="/signup" method="POST">
+  <label for="username">Username</label><br>
+  <input type="text" name="username" placeholder="Your username">
+<br>
+  <label for="password">Password</label><br>
+  <input type="password" name="password" placeholder="********">
+<br>
+  <button type="submit">Create account</button>
 </form>
+
+{{#if errorMessage}}
+  <div class="error-message">{{ errorMessage }}</div>
+{{/if}}
