--- a/starbook/views/error.hbs
+++ b/starbook/views/error.hbs
@@ -1,2 +1,3 @@
 <h1>Error!</h1>
-<h2>There was an error on the server! Check the console!</h2>
+<h2>There was an error on the server! Oh my God!</h2>
+<h2>Call the police and shut down everything! NOW!</h2>
