--- a/starbook/views/not-found.hbs
+++ b/starbook/views/not-found.hbs
@@ -1,2 +1,3 @@
 <h1>404 Error</h1>
-<h2>This route does not exist on the app! Check if everything is ok!</h2>
+<h2>This route does not exist on the app!</h2>
+<h2>Call the police and shut down everything! NOW!</h2>
