--- a/starbook/views/profile/profile.hbs
+++ b/starbook/views/profile/profile.hbs
@@ -1,11 +1,8 @@
-{{#each users}}
-Profile of: {{username}}
-<img src="{{profileImg}}" alt="">
-{{#each planets}} 
+{{!-- {{#each users}}
 
-{{#if_eq  name }}   
-
-{{/if_eq}}
-
-{{/each}}
-{{/each}}
+{{/each}} --}}
+<p>Profile of {{user.username}}</p>
+<img src="../{{user.profileImg}}" width="200px" height="200px"/>
+<p>Homeworld: {{planet.name}}</p>
+<a href="/editProfile/{{user._id}}">Edit your profile</a>
+<a href="/deleteProfile/{{user._id}}">Delete Profile</a>
