added Google signin

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -12,8 +12,12 @@
   {{/if}}
 
   <button>Sign in</button>
-
+  {{!-- Test on adding Google sign in  --}}
+  <a href="/google">Login with Google</a>
+  
   <p class="account-message">
     Don't have an account? <a href="/signup">Sign up</a>
   </p>
 </form>
+
+
