--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-light ">
 
-            <a class="navbar-brand" href="#">Welcome to the space</a>
+            <a class="navbar-brand" href="/">Starbook</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,6 @@
     <h1 class="animated zoomInRight slower delay-2s">I am an asteroyd</h1>
 
     <h1>Welcome to STARBOOK</h1>
-    <h1>Just testing, no worries :)</h1>
     <div class="container">
     </div>
 
