--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -6,6 +6,9 @@
   <input type="password" name="password" placeholder="********">
 <br>
   <button type="submit">Create account</button>
+  <p class="account-message">
+    Do you already have an account? <a href="/login">Login now!</a>
+  </p>
 </form>
 
 {{#if errorMessage}}
