edited error and not-found

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,7 @@
-<h1>Error!</h1>
-<h2>There was an error on the server! Oh my God!</h2>
-<h2>Call the police and shut down everything! NOW!</h2>
+<div class="container">
+  <h1 class="found">Error!</h1>
+  <h2 class="found">OMG! There was an error on the server!</h2>
+  <h2 class="found">Call the police and shut down everything! Do it NOW!</h2>
+
+  <img src="/images/police.gif" alt="alt-police!">
+</div>
