--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,4 +5,9 @@ body {
 a {
   color: #00B7FF; }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
 /*# sourceMappingURL=style.css.map */
