--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -6,3 +6,11 @@ body {
 a {
   color: #00B7FF;
 }
+
+// Error and 404
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
