--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,3 +1,6 @@
-<h1>404 Error</h1>
-<h2>This route does not exist on the app!</h2>
-<h2>Call the police and shut down everything! NOW!</h2>
+<div class="container">
+  <h1 class="found">404 Error</h1>
+  <h2 class="found">Did you get lost?</h2>
+  <h2 class="found">This route does not exist on the app!</h2>
+  <div class="found"><img src="/images/jumping-fox.gif" alt="jumping-fox"></div>
+</div>
