--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    
+
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-light ">
 
@@ -49,16 +49,35 @@
     <div class="container">
     </div>
 
+    <div>
+        <ul>
+            {{#each users}}
+            <li>
+                <a href="/profile/{{id}}">{{this.username}}</a>
+            </li>
+            {{/each}}
+        </ul>
+    </div>
+
+    <div>
+        <ul>
+        {{#each posts}}
+       <li>
+           HI!!!!
+       </li>
+        {{/each}}
+        </ul>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 </html>
