--- a/views/profile/edit-profile.hbs
+++ b/views/profile/edit-profile.hbs
@@ -4,14 +4,14 @@
 
  {{!-- create a route for the post that sends the edit to mongo db--}}
 
-<form action="" method="post">
+<form action="/editProfile/{{user.id}}" method="post">
   <label for="age">Enter your age:</label>
-<input type="text" name="age">
-<label for="description">Tell something about yourself:</label>
-<input type="text" name="description">
+<input type="text" name="age" value="{{user.age}}">
+<label for="bio">Tell something about yourself:</label>
+<input type="text" name="bio" value="{{user.bio}}">
 
 <label for="homeworlds">Choose your home world:</label>
-<select id="homeworlds" name="worldlist" form="worldform">
+<select name="homeworld">
   {{#each planets}}
   <option value="{{this.name}}">{{this.name}}</option>
   {{/each}}
@@ -20,15 +20,3 @@
 </form>
 
 
-
-{{!-- <select name="status" id="Status" class="binf-selectpicker" data-style="binf-btn-warning"> --}}
-
-{{!-- {{#select planet}}
-   
- {{#each planet}}
-  <option value="{{planet.name}}">{{planet.name}}</option>
-  {{/each}}
-
-{{/select}}  --}}
-
-{{!-- </select> --}}
