--- a/views/error.hbs
+++ b/views/error.hbs
@@ -3,5 +3,5 @@
   <h2 class="found">OMG! There was an error on the server!</h2>
   <h2 class="found">Call the police and shut down everything! Do it NOW!</h2>
 
-  <img src="/images/police.gif" alt="alt-police!">
+  <img class="found" src="/images/police.gif" alt="alt-police!">
 </div>
