--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,23 +1,47 @@
-<form action="/login" method="POST" id="form">
+<header>
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
+    <a class="navbar-brand text-white font-weight-bold" href="/">Starbook</a>
+    <span class="navbar-text text-white font-italic">
+      Welcome to the deep space!
+    </span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/login">Login<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Signup</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<form class="container" action="/login" method="POST" id="form">
   <h2>Login</h2>
 
-  <label for="username">Username</label>
+  <label class="text-white" for="username">username</label>
   <input type="text" name="username">
 
-  <label for="password">Password</label>
+  <label class="text-white" for="password">Password</label>
   <input type="password" name="password">
 
   {{#if errorMessage }}
-    <div class="error-message">{{ errorMessage }}</div>
+  <div class="error-message">{{ errorMessage }}</div>
   {{/if}}
 
   <button>Sign in</button>
   {{!-- Test on adding Google sign in  --}}
-  <a href="/google">Login with Google</a>
-  
-  <p class="account-message">
+  <a class="text-white" href="/google">Login with Google</a>
+
+  <p class="account-message text-white">
     Don't have an account? <a href="/signup">Sign up</a>
   </p>
 </form>
-
-
