--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,7 +1,7 @@
 <div class="container">
-  <h1 class="found">Error!</h1>
-  <h2 class="found">OMG! There was an error on the server!</h2>
-  <h2 class="found">Call the police and shut down everything! Do it NOW!</h2>
+  <h1 class="errorMessages">Error!</h1>
+  <h2 class="errorMessages">OMG! There was an error on the server!</h2>
+  <h2 class="errorMessages">Call the police and shut down everything! Do it NOW!</h2>
 
-  <img class="found" src="/images/police.gif" alt="alt-police!">
+  <img class="errorMessages gif" src="/images/police.gif" alt="alt-police!">
 </div>
