--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,16 +1,60 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+@font-face {
+  font-family: starWarsFont;
+  // src: url(../font/DeathStar-VmWB.ttf);
+  src: url(../font/Starjedi.ttf);
 }
 
-// Error and 404
+* {
+  font-family: starWarsFont;
+}
+
+// Error and 404 layout
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.errorMessages {
+  color: whitesmoke;
+}
+
+.gif {
+  margin-top: 2rem;
+}
+// Homepage layout
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  background: url(../images/blue-and-purple-cosmic-sky-956999.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+
+.jumbotron {
+background-color: transparent !important;}
+
+.navbar {
+  background-color: darkgray;
+}
+
+.quotes {
+  margin-top: 2rem;
+  color: whitesmoke;
+}
+
+.font {
+  color: whitesmoke;
 }
