--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,16 +1,43 @@
-<form id="form" action="/signup" method="POST">
-  <label for="username">Username</label><br>
+<header>
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
+    <a class="navbar-brand text-white font-weight-bold" href="/">Starbook</a>
+    <span class="navbar-text text-white font-italic">
+      Welcome to the deep space!
+    </span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/signup">Signup<span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<form class="container text-white" id="form" action="/signup" method="POST">
+  <label for="username">username</label><br>
   <input type="text" name="username" placeholder="Your username">
-<br>
+  <br>
   <label for="password">Password</label><br>
   <input type="password" name="password" placeholder="********">
-<br>
+  {{!-- moved this if statement into the form --}}
+  {{#if errorMessage}}
+  <div class="error-message">{{ errorMessage }}</div>
+  {{/if}}
+
+  <br>
   <button type="submit">Create account</button>
-  <p class="account-message">
+  <p class="account-message text-white">
     Do you already have an account? <a href="/login">Login now!</a>
   </p>
 </form>
-
-{{#if errorMessage}}
-  <div class="error-message">{{ errorMessage }}</div>
-{{/if}}
