--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,15 +13,17 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-light ">
-
-            <a class="navbar-brand" href="/">Starbook</a>
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
+            <a class="navbar-brand text-white font-weight-bold" href="/">Starbook</a>
+            <span class="navbar-text text-white font-italic">
+                Welcome to the deep space!
+            </span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav mr-auto">
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -32,25 +34,29 @@
                         <a class="nav-link" href="/signup">Signup</a>
                     </li>
                 </ul>
-                <span class="navbar-text">
-                    Welcome to the deep space. Get lost!
-                </span>
             </div>
         </nav>
     </header>
-    {{!-- <img src="..." class="img-fluid" alt="Responsive image"> --}}
 
-    <h1 class="animated flipInY delay-2s">Welcome to the deep space</h1>
-
-    <h1 class="animated zoomInRight slower delay-2s">I am an asteroyd</h1>
-
-    <h1>Welcome to STARBOOK</h1>
-    <div class="container">
+    <div class="container quotes">
+        <h1 class="animated flipInY delay-2s">Welcome to the deep space</h1>
+        <h1 class="animated zoomInRight slower delay-3s">&</h1>
     </div>
+
+    <div class="jumbotron container">
+        <h1 class="text-white font-weight-bold">Join Starbook today</h1>
+        <p class="lead text-white font-weight-bold">The social network for space travelers</p>
+        {{!-- <hr class="my-4"> --}}
+        <p class="text-white font-weight-bold">Enter a new universe of possibilities</p>
+        <p class="lead text-white font-weight-bold">
+            <a class="btn btn-primary btn-lg" href="/signup" role="button">Signup now!</a>
+        </p>
+    </div>
+
+    <br>
 
     <div>
         <ul>
-            {{!-- it should work for logged in users only  --}}
             {{#each users}}
             <li>
                 <a href="/profile/{{id}}">{{this.username}}</a>
@@ -61,23 +67,39 @@
 
     <div>
         <ul>
-        {{#each posts}}
-       <li>
-           HI!!!!
-       </li>
-        {{/each}}
+            {{#each posts}}
+            <li>
+                HI!!!!
+            </li>
+            {{/each}}
         </ul>
     </div>
 
+    <footer>
+        <div class="card">
+            {{!-- <div class="card-footer">
+                Quote
+            </div> --}}
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>“The Force will be with you. Always.”<span class="blockquote-footer">Obi-Wan Kenobi</span><cite title="Source Title">Star Wars</cite></p>
+                    <footer class="blockquote-footer"> 
+                    <p>Copywrite - Shall we add a link to our GitHub accounts?</p>
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
-        </script>
+    </script>
 </body>
 
 </html>
