--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1 class="errorMessages">404 Error</h1>
-  <h2 class="errorMessages">Did you get lost?</h2>
-  <h2 class="errorMessages">This route does not exist on the app!</h2>
-  <div class="errorMessages"><img src="/images/jumping-fox.gif" alt="jumping-fox"></div>
+  <h1 class="errorMessages text-center">404 Error</h1>
+  <h2 class="errorMessages text-center">Did you get lost?</h2>
+  <h2 class="errorMessages text-center">This route does not exist on the app!</h2>
+  <div class="errorMessages text-center"><img src="/images/jumping-fox.gif" alt="jumping-fox"></div>
 </div>
