--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -31,8 +31,10 @@ body {
 // Homepage layout
 
 html, body {
-  height: 100%;
+  // height: 100%;
   margin: 0;
+  height: 100vh;//100% view height
+  width: 100vw;// 100% view width
 }
 
 body {
@@ -46,9 +48,16 @@ body {
 .jumbotron {
 background-color: transparent !important;}
 
-.navbar {
-  background-color: darkgray;
+nav {
+  background-color: transparent;
+  opacity: 0.9;
 }
+
+// it doesn't work :( 
+
+// .navbar-toggler-icon {
+//   color: whitesmoke !important;
+// }
 
 .quotes {
   margin-top: 2rem;
@@ -58,3 +67,13 @@ background-color: transparent !important;}
 .font {
   color: whitesmoke;
 }
+
+// Footer
+
+footer {
+  // position: fixed;
+  height: 2rem;
+  bottom: 0;
+  width: 100%;
+}
+
