--- a/views/post/edit.hbs
+++ b/views/post/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/editpost" method="POST">
+<form action="/editpost/{{post.id}}" method="POST">
 <input type="text" name="title" value="{{post.title}}">
 <input type="text" name="body" value="{{post.body}}">
 <span>{{user.username}}</span>
