--- a/views/index.hbs
+++ b/views/index.hbs
@@ -74,7 +74,9 @@
         <ul>
             {{#each posts}}
             <li>
-                HI!!!!
+                {{this.title}}
+                {{this.body}}
+                {{this.postedBy.username}}
             </li>
             {{/each}}
         </ul>
