--- a/views/profile/edit-profile.hbs
+++ b/views/profile/edit-profile.hbs
@@ -19,6 +19,7 @@
 {{!-- edit profile info --}}
 
 <form action="/editProfile/{{user.id}}" method="post">
+
   <label for="age">Enter your age:</label>
 <input type="text" name="age" value="{{user.age}}">
 <label for="bio">Tell something about yourself:</label>
@@ -30,6 +31,14 @@
   <option value="{{this.name}}">{{this.name}}</option>
   {{/each}}
 </select>
+
+<label for="spaceships">Choose your spaceship</label>
+<select name="spaceship">
+  {{#each spaceships}}
+  <option value="{{this.name}}">{{this.name}}</option>
+  {{/each}}
+</select>
+
 <button type="submit">Save</button>
 </form>
 
