--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 600px) {
+  p {
+    color: lightblue !important; }
+  .footer-quote {
+    display: none; } }
+
 body {
   padding: 50px; }
 
