--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,3 +1,13 @@
+@media only screen and (max-width: 600px) {
+  p {
+    color: lightblue !important;
+  }
+
+  .footer-quote {
+    display: none;
+  }
+}
+
 body {
   padding: 50px;
 }
