--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,16 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {{!-- <title>{{title}}</title> --}}
   <link rel="icon" href="../images/favicon.png" type="image/gif">
-  <link rel="stylesheet" href="/stylesheets/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="./stylesheets/style.css" />
 </head>
 
 <body>
 
   {{{body}}}
-
+   <footer class="fixed-bottom">
+        <div class="card">
+            <div>
+                <p class="float-right footer-quote">“The Force will be with you. Always.”<span>obi-wan kenobi</span></p>
+                <p>Copywrite - anastezia-kz & teo-23</p>
+            </div>
+        </div>
+    </footer>
+    
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
   </script>
