--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -4,7 +4,7 @@
     <span class="navbar-text text-info font-italic">
       once in a lifetime opportunity
     </span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+    <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,19 +23,6 @@
     </div>
   </nav>
 </header>
-
-{{!-- <form class="container text-white" id="form" action="/signup" method="POST">
-  <label for="username">username</label><br>
-  <input type="text" name="username" placeholder="Your username">
-  <br>
-  <label for="password">Password</label><br>
-  <input type="password" name="password" placeholder="********">
-  {{!-- moved this if statement into the form --}}
-  {{#if errorMessage}}
-  <div class="error-message">{{ errorMessage }}</div>
-  {{/if}}
-  <br>
-</form> --}}
 
 <div class="loginContainer">
   <div class="row">
@@ -62,8 +49,6 @@
 
             <button class="btn btn-lg btn-info btn-block text-center" type="submit">Sign up</button>
             <hr class="my-4">
-            {{!-- <button class="btn btn-lg btn-google btn-block text-center" type="submit"><i class="fab mr-2"></i>Create
-              account</button> --}}
             <p class="account-message text-center">
               Do you already have an account? <a class="text-center text-info" href="/login">login now!</a>
             </p>
