--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  {{!-- <title>{{title}}</title> --}}
-  <link rel="icon" href="../images/favicon.png" type="image/gif">
+  <title>Starbook</title>
+  <link rel="icon" href="../images/favicon.ico" type="image/gif">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -20,7 +21,7 @@
         <div class="card">
             <div>
                 <p class="float-right footer-quote">“The Force will be with you. Always.”<span>obi-wan kenobi</span></p>
-                <p>Copywrite - anastezia-kz & teo-23</p>
+                <p class="copywrite">Copywrite - anastezia-kz & teo-23</p>
             </div>
         </div>
     </footer>
