--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,15 +17,17 @@
 <body>
 
   {{{body}}}
+
+  {{!-- <div>“The Force will be with you. Always.”<span>obi-wan kenobi</span></div> --}}
+
    <footer class="fixed-bottom">
         <div class="card">
             <div>
-                <p class="float-right footer-quote">“The Force will be with you. Always.”<span>obi-wan kenobi</span></p>
-                <p class="copywrite">Copywrite - anastezia-kz & teo-23</p>
+                <p class="footer-quote text-center">© 2020 Copyright:<span><a class="copywrite" href="https://github.com/anastezia-kz" target="_blank"> anastezia-kz</a> & <a class="copywrite" href="https://github.com/teo-23" target="_blank"> teo-23</a></span></p>
             </div>
         </div>
     </footer>
-    
+
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
   </script>
