--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,9 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
-    <a class="navbar-brand text-white font-weight-bold" href="/">Starbook</a>
-    <span class="navbar-text text-info font-italic">
-      once in a lifetime opportunity
-    </span>
+    <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span class="navbar-text text-info font-italic"> once in a lifetime opportunity</span></a>
+    
     <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
