--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,92 +1,86 @@
-   <header>
-       <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
-           <a class="navbar-brand text-white font-weight-bold" href="/">Starbook</a>
-           <span class="navbar-text text-info font-italic text-left">
-               A space trip!
-           </span>
-           <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-               aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon toggler"></span>
-           </button>
-           <div class="collapse navbar-collapse" id="navbarResponsive">
-               <ul class="navbar-nav ml-auto">
-                   <li class="nav-item active">
-                       <a class="nav-link text-info" href="/">Home <span class="sr-only">(current)</span></a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link text-white" href="/login">Login</a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link text-white" href="/signup">Signup</a>
-                   </li>
-               </ul>
-           </div>
-       </nav>
-   </header>
+<header>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
+        <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
+                class="navbar-text text-info font-italic text-left"> A space trip!
+            </span></a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon toggler"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-info" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/signup">Signup</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
+<div class="container text-white">
+
+    <div class="row">
+        <div class=".col-md-2 bar-left">
+            <p class="animated infinite slower flash delay-1s">.</p>
+            {{!-- <img src="/images/blue_star.png" alt=""> --}}
+        </div>
+
+        <div class=".col-md-8">
+            <div class="container quotes">
+                <h1 class="animated flipInY delay-2s text-center">Welcome to the deep space</h1>
+                <h1 class="animated zoomInRight text-white slower delay-3s text-center">&</h1>
+            </div>
+
+            <div class="jumbotron jumboContainer container">
+                <h1 class="text-white font-weight-bold text-center">Join Starbook today</h1>
+                <p class="lead text-white font-weight-bold text-center">The social network for space travelers
+                </p>
+                <p class="text-white font-weight-bold text-center">Enter a new universe of possibilities</p>
+                <p class="lead text-white font-weight-bold">
+                    <a class="btn btn-info btn-lg text-center" href="/signup" role="button">Signup now!</a>
+                </p>
+                <p class="lead text-white font-weight-bold">
+                    <a class="btn btn-info btn-lg animated hinge slow delay-3s text-center" role="button">Leave the
+                        site
+                        now!</a>
+                    <h1 class="animated fadeInRightBig text-white slower delay-2s text-center indentLogo">@</h1>
+                </p>
+            </div>
+        </div>
+
+        <div class=".col-md-2 bar-right">
+        </div>
+    </div>
+</div>
 
 
+{{!-- TO BE MOVED TO A NEW PAGE, STILL TO CREATE --}}
 
-   <div class="container text-white">
+<div>
+    <ul>
+        {{#each users}}
+        <li>
+            <a href="/profile/{{id}}">{{this.username}}</a>
+        </li>
+        {{/each}}
+    </ul>
+</div>
 
-       <div class="row">
-           <div class=".col-md-2 bar-left">
-               {{!-- <img class="animated infinite flash delay-1s star" src="../images/whitestar.png" alt="flashing-star"> --}}
-               <p class="animated infinite flash delay-1s">.</p>
-               <p class="animated infinite slower flash delay-1s">.</p>
-           </div>
-
-           <div class=".col-md-8">
-               <div class="container quotes">
-                   {{!-- <h1 class="animated hinge slow delay-2s">#</h1> --}}
-                   <h1 class="animated flipInY delay-2s text-center">Welcome to the deep space</h1>
-                   <h1 class="animated zoomInRight text-white slower delay-3s text-center">&</h1>
-               </div>
-
-               <div class="jumbotron jumboContainer container">
-                   <h1 class="text-white font-weight-bold text-center">Join Starbook today</h1>
-                   <p class="lead text-white font-weight-bold text-center">The social network for space travelers</p>
-                   {{!-- <hr class="my-4"> --}}
-                   <p class="text-white font-weight-bold text-center">Enter a new universe of possibilities</p>
-                   <p class="lead text-white font-weight-bold">
-                       <a class="btn btn-info btn-lg text-center" href="/signup" role="button">Signup now!</a>
-                   </p>
-                   <p class="lead text-white font-weight-bold">
-                       <a class="btn btn-info btn-lg animated hinge slow delay-3s text-center" role="button">Leave the
-                           site now!</a>
-                       <h1 class="animated fadeInRightBig text-white slower delay-2s text-center indentLogo">@</h1>
-                       {{!-- class="animated hinge slow delay-2s" --}}
-                   </p>
-               </div>
-           </div>
-
-           <div class=".col-md-2 bar-right">
-               3 of 3
-           </div>
-       </div>
-   </div>
-
-
-   {{!-- TO BE MOVED TO A NEW PAGE, STILL TO CREATE --}}
-
-   <div>
-       <ul>
-           {{#each users}}
-           <li>
-               <a href="/profile/{{id}}">{{this.username}}</a>
-           </li>
-           {{/each}}
-       </ul>
-   </div>
-
-   <div>
-       New Posts
-       <ul>
-           {{#each posts}}
-           <li>
-               {{this.title}}
-               {{this.body}}
-               {{this.postedBy.username}}
-           </li>
-           {{/each}}
-       </ul>
-   </div>
+<div>
+    New Posts
+    <ul>
+        {{#each posts}}
+        <li>
+            {{this.title}}
+            {{this.body}}
+            {{this.postedBy.username}}
+        </li>
+        {{/each}}
+    </ul>
+</div>
