--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,42 +23,37 @@
     </nav>
 </header>
 
-<div class="container text-white">
+<main>
 
-    <div class="row">
-        <div class=".col-md-2 bar-left">
-            <p class="animated infinite slower flash delay-1s">.</p>
-            {{!-- <img src="/images/blue_star.png" alt=""> --}}
+    <div class="container text-white distanceBar">
+        <div class="container quotes">
+            <h1 class="animated flipInY delay-2s text-center">Welcome to the deep space</h1>
+            <h1 class="animated zoomInRight text-white slower delay-3s text-center">&</h1>
         </div>
-
-        <div class=".col-md-8">
-            <div class="container quotes">
-                <h1 class="animated flipInY delay-2s text-center">Welcome to the deep space</h1>
-                <h1 class="animated zoomInRight text-white slower delay-3s text-center">&</h1>
-            </div>
-
-            <div class="jumbotron jumboContainer container">
-                <h1 class="text-white font-weight-bold text-center">Join Starbook today</h1>
-                <p class="lead text-white font-weight-bold text-center">The social network for space travelers
-                </p>
-                <p class="text-white font-weight-bold text-center">Enter a new universe of possibilities</p>
-                <p class="lead text-white font-weight-bold">
-                    <a class="btn btn-info btn-lg text-center" href="/signup" role="button">Signup now!</a>
-                </p>
-                <p class="lead text-white font-weight-bold">
-                    <a class="btn btn-info btn-lg animated hinge slow delay-3s text-center" role="button">Leave the
-                        site
-                        now!</a>
-                    <h1 class="animated fadeInRightBig text-white slower delay-2s text-center indentLogo">@</h1>
-                </p>
-            </div>
-        </div>
-
-        <div class=".col-md-2 bar-right">
+        <div class="jumbotron jumboContainer container">
+            <h1 class="text-white font-weight-bold text-center">Join Starbook today</h1>
+            <p class="lead text-white font-weight-bold text-center">The social network for space travelers
+            </p>
+            <p class="text-white font-weight-bold text-center">Enter a new universe of possibilities</p>
+            <p class="lead text-white font-weight-bold">
+                <a class="btn btn-info btn-lg text-center" href="/signup" role="button">Signup now!</a>
+            </p>
+            <p class="lead text-white font-weight-bold">
+                <a class="btn btn-info btn-lg animated hinge slow delay-3s text-center" role="button">Leave the
+                    site
+                    now!</a>
+                <h1 class="animated fadeInRightBig text-white slower delay-2s text-center indentLogo">@</h1>
+            </p>
         </div>
     </div>
-</div>
+</main>
 
+
+{{!-- STARS --}}
+<aside style="display:none">
+    <img class="star" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/neon-star7.png">
+    <img class="star" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/neon-star10.png">
+</aside>
 
 {{!-- TO BE MOVED TO A NEW PAGE, STILL TO CREATE --}}
 
