--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,6 +1,31 @@
+<header>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
+        <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
+                class="navbar-text text-info font-italic text-left"> A space trip!
+            </span></a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon toggler"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-info" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/signup">Signup</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
 <div class="container">
-  <h1 class="errorMessages text-center">404 Error</h1>
-  <h2 class="errorMessages text-center">Did you get lost?</h2>
-  <h2 class="errorMessages text-center">This route does not exist on the app!</h2>
+  <h1 class="errorMessages text-center">404 error</h1>
+  <h2 class="errorMessages text-center">did you get lost?</h2>
+  <h2 class="errorMessages text-center">this route does not exist on the app!</h2>
   <div class="errorMessages text-center"><img src="/images/jumping-fox.gif" alt="jumping-fox"></div>
 </div>
