--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,39 +7,50 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Starbook</title>
   <link rel="icon" href="../images/favicon.ico" type="image/gif">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="./stylesheets/style.css" />
 </head>
 
-<body>
+  <body>
 
-  {{{body}}}
+    {{{body}}}
 
-  {{!-- <div>“The Force will be with you. Always.”<span>obi-wan kenobi</span></div> --}}
 
-   <footer class="fixed-bottom">
-        <div class="card">
-            <div>
-                <p class="footer-quote text-center">© 2020 Copyright:<span><a class="copywrite" href="https://github.com/anastezia-kz" target="_blank"> anastezia-kz</a> & <a class="copywrite" href="https://github.com/teo-23" target="_blank"> teo-23</a></span></p>
-            </div>
+    {{!-- <div>“The Force will be with you. Always.”<span>obi-wan kenobi</span></div> --}}
+
+    <footer class="fixed-bottom">
+      <div class="card">
+        <div>
+          <p class="footer-quote text-center">© 2020 Copyright:<span><a class="copywrite"
+                href="https://github.com/anastezia-kz" target="_blank"> anastezia-kz</a> & <a class="copywrite"
+                href="https://github.com/teo-23" target="_blank"> teo-23</a></span></p>
         </div>
+      </div>
     </footer>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-  </script>
-  <script src="/javascripts/script.js"></script>
-  {{!-- Google sign in --}}
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+    <script src="/javascripts/script.js"></script>
+
+    {{!-- animations gsap --}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/EasePack.min.js"></script>
+
+    {{!-- SCRIPT STARS --}}
+    <script src="/javascripts/scriptStars.js"></script>
+
+    {{!-- Google sign in --}}
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+  </body>
+
 
 </html>
