--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,15 +1,14 @@
-{{!-- {{#each users}}
+<div>
+  <p class="testProf">Welcome to the galaxy {{user.username}}</p>
+  <img src="../{{user.profileImg}}" width="200px" height="200px" />
+  <p>Homeworld: {{planet}}</p>
+  <p>Age: {{user.age}}</p>
+  <p>About me: {{user.bio}}</p>
 
-{{/each}} --}}
-<p>Profile of {{user.username}}</p>
-<img src="../{{user.profileImg}}" width="200px" height="200px"/>
-<p>Homeworld: {{planet}}</p>
-<p>Age: {{user.age}}</p>
-<p>About me: {{user.bio}}</p>
-
-{{#if loggedInUser}}
-<a href="/addpost">Write a post</a>
-<a href="/editProfile/{{user._id}}">Edit your profile</a>
-<a href="/deleteProfile/{{user._id}}">Delete Profile</a> 
-<a href="/logout">Log out</a>               
-{{/if}}
+  {{#if loggedInUser}}
+  <a href="/addpost">Write a post</a>
+  <a href="/editProfile/{{user._id}}">Edit your profile</a>
+  <a href="/deleteProfile/{{user._id}}">Delete Profile</a>
+  <a href="/logout">Log out</a>
+  {{/if}}
+</div>
