--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -4,6 +4,8 @@
   <p>Homeworld: {{planet}}</p>
   <p>Age: {{user.age}}</p>
   <p>About me: {{user.bio}}</p>
+  <p>My spaceship:{{user.spaceship}}</p>
+  <p>I am:{{user.species}}</p>
 
   {{#if loggedInUser}}
   <a href="/addpost">Write a post</a>
