adjusted some codes

--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,5 +1,5 @@
 <div>
-  <p class="testProf">Welcome to the galaxy {{user.username}}</p>
+  <p>Welcome to the galaxy {{user.username}}</p>
   <img src="../{{user.profileImg}}" width="200px" height="200px" />
   <p>Homeworld: {{planet}}</p>
   <p>Age: {{user.age}}</p>
