--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,7 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
-    <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span class="navbar-text text-info font-italic"> once in a lifetime opportunity</span></a>
-    
+    <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
+        class="navbar-text text-info font-italic"> once in a lifetime opportunity</span></a>
+
     <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -47,6 +48,8 @@
 
             <button class="btn btn-lg btn-info btn-block text-center" type="submit">Sign up</button>
             <hr class="my-4">
+            <button class="btn btn-lg btn-google btn-block text-center" type="submit"><i
+                class="fab fa-google mr-2"></i><a class="text-info" href="/google"> Signup with Google</a></button>
             <p class="account-message text-center">
               Do you already have an account? <a class="text-center text-info" href="/login">login now!</a>
             </p>
