added babars to all the pages

--- a/views/profile/photo-add.hbs
+++ b/views/profile/photo-add.hbs
@@ -1,6 +1,6 @@
 {{!-- views/photo-add.hbs --}}
-
-<h2>Upload a new profile picture</h2>
+<div class="text-white">
+<h2>upload a new profile picture</h2>
 <form action="/photo/add" method="post" enctype="multipart/form-data">
   {{!-- <label>Title</label>
   <input type="text" name="title">
@@ -13,3 +13,4 @@
 
   <input type="submit" value="SAVE">
 </form>
+</div>
