--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -1,5 +1,28 @@
+<header>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow">
+        <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
+                class="navbar-text text-info font-italic text-left"> A space trip!
+            </span></a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon toggler"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/profile">your profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
 
-<a class="nav-link text-info" href="/profile/{{_id}}">My profile <span class="sr-only">(current)</span></a>
+<div class="text-white">
+
+<a class="nav-link text-info" href="/profile/{{_id}}">my profile <span class="sr-only">(current)</span></a>
 <div>
     <ul>
         {{#each users}}
@@ -11,7 +34,7 @@
 </div>
 
 <div>
-    New Posts
+    new posts
     <ul>
         {{#each posts}}
         <li>
@@ -21,4 +44,5 @@
         </li>
         {{/each}}
     </ul>
+</div>
 </div>
