--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -79,7 +79,9 @@ body {
   background-color: transparent !important;
 }
 
+
 nav {
+ 
   background-color: transparent;
 }
 
@@ -139,3 +141,11 @@ main {
   opacity: 0;
 }
 
+//profile
+
+.prifile-container{
+  background-color: aqua;
+  display: flex;
+  align-items: center;
+  flex-direction: column;  
+}
