--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,16 +1,45 @@
-<div>
+{{!-- <header>
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5 shadow something">
+    <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span class="navbar-text text-info font-italic"> enter the deep space!</span></a>
+    
+    <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/">Home</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link text-info" href="/login">Login<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/signup">Signup</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header> --}}
+
+<div class="prifile-container">
   <p class="testProf">Welcome to the galaxy {{user.username}}</p>
-  <img src="../{{user.profileImg}}" width="200px" height="200px" />
+  <img src="{{user.profileImg}}" width="200px" height="200px" />
   <p>Homeworld: {{planet}}</p>
   <p>Age: {{user.age}}</p>
   <p>About me: {{user.bio}}</p>
   <p>My spaceship:{{user.spaceship}}</p>
-  <p>I am:{{user.species}}</p>
+  <p>i am:{{user.species}}</p>
+
 
   {{#if loggedInUser}}
   <a href="/addpost">Write a post</a>
   <a href="/editProfile/{{user._id}}">Edit your profile</a>
-  <a href="/deleteProfile/{{user._id}}">Delete Profile</a>
+  
+  <form action="/delete-profile/{{user._id}}" method="post">
+  <button type="submit">Delete profile</button>
+  </form>
+
   <a href="/logout">Log out</a>
   {{/if}}
 </div>
